--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "~/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "vite.config.ts", ".eslintrc.cjs"],
   "exclude": ["node_modules", "**/*.spec.ts"]
 }
