phase 2: TS overhaul 2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,17 @@
 {
   "cSpell.words": [
+    "dompurify",
     "favorited",
     "innerhtml",
     "ionicframework",
     "Ionicon",
     "ionicons",
+    "lintfix",
     "productionready",
+    "realworld",
+    "solidstart",
+    "typecheck",
+    "undici",
     "unfollow"
   ]
 }
