--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,6 @@
       "~/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "vite.config.ts", ".eslintrc.js"],
+  "include": ["src/**/*", "vite.config.ts", ".eslintrc.cjs", "index.d.ts"],
   "exclude": ["node_modules", "**/*.spec.ts", "scripts/**/*"]
 }
