--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,18 @@
     "moduleResolution": "node",
     "jsxImportSource": "solid-js",
     "jsx": "preserve",
+    "typeRoots": ["./typings"],
     "types": ["vite/client", "vitest"],
     "baseUrl": "./",
     "paths": {
       "~/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*", "vite.config.ts", ".eslintrc.cjs", "index.d.ts"],
+  "include": [
+    "src/**/*",
+    "vite.config.ts",
+    ".eslintrc.cjs",
+    "typings/index.d.ts"
+  ],
   "exclude": ["node_modules", "**/*.spec.ts", "scripts/**/*"]
 }
