--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "target": "ESNext",
@@ -20,5 +21,5 @@
     ".eslintrc.cjs",
     "typings/index.d.ts"
   ],
-  "exclude": ["node_modules", "**/*.spec.ts", "scripts/**/*"]
+  "exclude": ["node_modules", "typings/index.d.ts", "**/*.spec.ts", "scripts"]
 }
