--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "type": "module",
   "devDependencies": {
+    "@solidjs/meta": "^0.28.0",
+    "@solidjs/router": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@types/dompurify": "^2.3.3",
     "@types/marked": "^4.0.3",
@@ -26,24 +28,21 @@
     "eslint-plugin-solid": "^0.7.1",
     "jsdom": "^19.0.0",
     "prettier": "^2.7.1",
-    "solid-app-router": "^0.4.2",
+    "solid-js": "^1.4.0",
+    "solid-start": "0.1.0-alpha.97",
+    "solid-start-node": "0.1.0-alpha.97",
     "solid-testing-library": "^0.3.0",
-    "terser": "^5.14.2",
     "typescript": "^4.4.3",
     "undici": "^4.12.2",
+    "vite": "3.0.3",
     "vite-plugin-inspect": "^0.3.13",
-    "vitest": "^0.6.3"
+    "vitest": "^0.6.1"
   },
   "engines": {
     "node": ">=14"
   },
   "dependencies": {
     "dompurify": "^2.3.10",
-    "marked": "^4.0.18",
-    "solid-js": "^1.4.8",
-    "solid-meta": "^0.28.1",
-    "solid-start": "0.1.0-alpha.89",
-    "solid-start-node": "0.1.0-alpha.82",
-    "vite": "3.0.4"
+    "marked": "^4.0.18"
   }
 }
