--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
   "dependencies": {
     "@prisma/client": "^4.1.1",
     "dompurify": "^2.3.10",
+    "envalid": "^7.3.1",
     "marked": "^4.0.18",
     "prisma": "^4.1.1",
     "slugify": "^1.6.5"
