--- a/package.json
+++ b/package.json
@@ -22,29 +22,30 @@
   "devDependencies": {
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.4.2",
-    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/jest-dom": "^5.16.5",
     "@types/dompurify": "^2.3.3",
     "@types/marked": "^4.0.3",
-    "@types/testing-library__jest-dom": "^5.14.3",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "eslint": "^8.20.0",
+    "@types/testing-library__jest-dom": "^5.14.5",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
+    "eslint": "^8.21.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-solid": "^0.7.1",
-    "jsdom": "^19.0.0",
+    "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
-    "solid-js": "^1.4.0",
-    "solid-start": "0.1.0-alpha.97",
-    "solid-start-node": "0.1.0-alpha.97",
+    "rollup": "^2.77.2",
+    "solid-js": "1.4.7",
+    "solid-start": "0.1.0-alpha.99",
+    "solid-start-node": "0.1.0-alpha.99",
     "solid-testing-library": "^0.3.0",
-    "typescript": "^4.4.3",
-    "undici": "^4.12.2",
+    "typescript": "^4.7.4",
+    "undici": "^5.8.1",
     "vite": "3.0.4",
-    "vite-plugin-inspect": "^0.3.13",
-    "vitest": "^0.6.1"
+    "vite-plugin-inspect": "^0.6.0",
+    "vitest": "^0.21.0"
   },
   "engines": {
     "node": ">=14"
@@ -52,6 +53,7 @@
   "dependencies": {
     "@prisma/client": "^4.1.1",
     "dompurify": "^2.3.10",
+    "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
     "marked": "^4.0.18",
     "prisma": "^4.1.1",
