--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "dev": "solid-start dev",
     "build": "solid-start build",
     "start": "solid-start start",
-    "postinstall": "node ./scripts/fix-jest-dom.mjs",
     "typecheck": "tsc -b",
     "format": "prettier --write \"**/*.+(mjs|cjs|js|jsx|json|yml|yaml|css|less|scss|ts|tsx|md|gql|graphql|mdx|vue)\"",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/.eslintcache --ext js,jsx,ts,tsx \"{src,test}/**/*.ts\"",
@@ -25,7 +24,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@types/dompurify": "^2.3.3",
     "@types/marked": "^4.0.3",
-    "@types/testing-library__jest-dom": "^5.14.5",
+    "@types/node": "*",
+    "@types/testing-library__jest-dom": "^5.14.4",
     "@typescript-eslint/eslint-plugin": "^5.32.0",
     "@typescript-eslint/parser": "^5.32.0",
     "eslint": "^8.21.0",
@@ -38,9 +38,10 @@
     "prettier": "^2.7.1",
     "rollup": "^2.77.2",
     "solid-js": "1.4.7",
-    "solid-start": "0.1.0-alpha.99",
-    "solid-start-node": "0.1.0-alpha.99",
+    "solid-start": "next",
+    "solid-start-node": "next",
     "solid-testing-library": "^0.3.0",
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "undici": "^5.8.1",
     "vite": "3.0.4",
