--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "jsxImportSource": "solid-js",
     "jsx": "preserve",
     "typeRoots": ["./typings"],
-    "types": ["vite/client", "vitest"],
+    "types": ["vite/client", "vitest", "@testing-library/jest-dom"],
     "baseUrl": "./",
     "paths": {
       "~/*": ["./src/*"]
@@ -19,9 +19,8 @@
     "src/**/*",
     "vite.config.ts",
     ".eslintrc.cjs",
-    "typings/index.d.ts",
-    "config",
+    "vitest.setup.ts",
     "prisma"
   ],
-  "exclude": ["node_modules", "typings/index.d.ts", "**/*.spec.ts", "scripts"]
+  "exclude": ["node_modules", "**/*.spec.ts", "scripts"]
 }
