--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@solidjs/meta": "^0.28.0",
     "@solidjs/router": "^0.4.2",
     "@testing-library/jest-dom": "^5.16.5",
+    "@types/bcrypt": "^5.0.0",
     "@types/dompurify": "^2.3.3",
     "@types/marked": "^4.0.3",
     "@types/node": "*",
@@ -53,9 +54,12 @@
   },
   "dependencies": {
     "@prisma/client": "^4.1.1",
+    "@types/jsonwebtoken": "^8.5.8",
+    "bcrypt": "^5.0.1",
     "dompurify": "^2.3.10",
     "dotenv": "^16.0.1",
     "envalid": "^7.3.1",
+    "jsonwebtoken": "^8.5.1",
     "marked": "^4.0.18",
     "prisma": "^4.1.1",
     "slugify": "^1.6.5"
