--- a/package.json
+++ b/package.json
@@ -39,14 +39,10 @@
     "prettier": "^2.7.1",
     "rollup": "^2.77.2",
     "solid-js": "1.4.7",
-    "solid-start": "next",
-    "solid-start-node": "next",
     "solid-testing-library": "^0.3.0",
+    "terser": "^5.14.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "undici": "^5.8.1",
-    "vite": "3.0.4",
-    "vite-plugin-inspect": "^0.6.0",
     "vitest": "^0.21.0"
   },
   "engines": {
@@ -63,16 +59,20 @@
     "marked": "^4.0.18",
     "prisma": "^4.1.1",
     "slugify": "^1.6.5",
-    "vest": "^4.6.1"
+    "solid-start": "0.1.0-alpha.99",
+    "solid-start-node": "0.1.0-alpha.99",
+    "undici": "^5.8.2",
+    "vest": "^4.6.1",
+    "vite": "3.0.4"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "lint-staged": {
     "*.ts": [
-      "npm run prisma:format",
-      "npm run lint:fix",
-      "npm run prettier:write",
+      "pnpm prisma:format",
+      "pnpm lint:fix",
+      "pnpm format",
       "git add"
     ]
   }
